# omega

./: .cproject  .gitignore  .project  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile.common.in  MlangConfigVersion.cmake.in  OmegaConfig.cmake.in  README.md  configure  test
autoconf/: configure.ac
cmake/Modules/: CppLint.cmake  LLVMConfig.cmake
include/: argvparser.hh  code_compiler.hh  code_generator.hh  code_parser.hh  code_resolver.hh  code_type_inference.hh  codedom.hh  compiler_error.hh  compiler_parameters.hh  compiler_results.hh  dom_provider.hh  easylogging++.hh  file_system.hh  linker.hh  mlang.hh  mlang_code_compiler.hh  mlang_code_generator.hh  mlang_code_parser.hh  mlang_code_type_inference.hh  mlang_dom_provider.hh  mlang_semantic_analysis.hh  omega.hh  pstream.hh  semantic_analysis.hh  utils.hh
include/codedom/: _code_dom.txt  code_array_create_expression.hh  code_array_indexer_expression.hh  code_assembly_call_expression.hh  code_assign_expression.hh  code_attribute_argument.hh  code_attribute_declaration.hh  code_binary_operator_expression.hh  code_cast_expression.hh  code_compile_unit.hh  code_condition_statement.hh  code_expression.hh  code_expression_statement.hh  code_field_reference_expression.hh  code_file_import.hh  code_file_include.hh  code_ir_block_statement.hh  code_iteration_statement.hh  code_member_field.hh  code_member_method.hh  code_member_property.hh  code_method_invoke_expression.hh  code_method_reference_expression.hh  code_method_return_statement.hh  code_namespace.hh  code_object.hh  code_object_collections.hh  code_object_create_expression.hh  code_object_resolver.hh  code_object_visitor.hh  code_parameter_declaration_expression.hh  code_primitive_expression.hh  code_scope.hh  code_size_of_expression.hh  code_statement.hh  code_type_declaration.hh  code_type_member.hh  code_type_reference.hh  code_variable_declaration_statement.hh  code_variable_reference_expression.hh
lib/: CMakeLists.txt  Makefile
lib/mlang/: .linker.cpp.swp  CMakeLists.txt  Makefile  argvparser.cpp  code_compiler.cpp  code_generator.cpp  code_parser.cpp  code_type_inference.cpp  compiler_error.cpp  compiler_parameters.cpp  compiler_results.cpp  linker.cpp  mlang_code_compiler.cpp  mlang_code_generator.cpp  mlang_code_parser.cpp  mlang_code_type_inference.cpp  mlang_dom_provider.cpp  mlang_semantic_analysis.cpp  semantic_analysis.cpp
lib/mlang/codedom/: Makefile  code_array_create_expression.cpp  code_array_indexer_expression.cpp  code_assembly_call_expression.cpp  code_assign_expression.cpp  code_attribute_argument.cpp  code_attribute_declaration.cpp  code_binary_operator_expression.cpp  code_cast_expression.cpp  code_compile_unit.cpp  code_condition_statement.cpp  code_expression.cpp  code_expression_statement.cpp  code_field_reference_expression.cpp  code_file_import.cpp  code_ir_block_statement.cpp  code_iteration_statement.cpp  code_member_field.cpp  code_member_method.cpp  code_member_property.cpp  code_method_invoke_expression.cpp  code_method_reference_expression.cpp  code_method_return_statement.cpp  code_namespace.cpp  code_object.cpp  code_object_create_expression.cpp  code_object_resolver.cpp  code_object_visitor.cpp  code_parameter_declaration_expression.cpp  code_primitive_expression.cpp  code_scope.cpp  code_size_of_expression.cpp  code_statement.cpp  code_type_declaration.cpp  code_type_member.cpp  code_type_reference.cpp  code_variable_declaration_statement.cpp  code_variable_reference_expression.cpp
lib/mlang/parser/: Makefile  location.hh  mlang_driver.cpp  mlang_driver.hh  mlang_parser.cpp  mlang_parser.dot  mlang_parser.hh  mlang_parser.yy  mlang_scanner.cpp  mlang_scanner.hh  mlang_scanner.ll  position.hh  stack.hh
lib/omega/: CMakeLists.txt  argvparser.cpp  code_compiler.cpp  code_generator.cpp  code_parser.cpp  code_resolver.cpp  code_type_inference.cpp  compiler_error.cpp  compiler_parameters.cpp  compiler_results.cpp  config.h.in  dom_provider.cpp  linker.cpp  semantic_analysis.cpp
lib/omega/codedom/: code_array_create_expression.cpp  code_array_indexer_expression.cpp  code_assembly_call_expression.cpp  code_assign_expression.cpp  code_attribute_argument.cpp  code_attribute_declaration.cpp  code_binary_operator_expression.cpp  code_cast_expression.cpp  code_compile_unit.cpp  code_condition_statement.cpp  code_expression.cpp  code_expression_statement.cpp  code_field_reference_expression.cpp  code_file_import.cpp  code_ir_block_statement.cpp  code_iteration_statement.cpp  code_member_field.cpp  code_member_method.cpp  code_member_property.cpp  code_method_invoke_expression.cpp  code_method_reference_expression.cpp  code_method_return_statement.cpp  code_namespace.cpp  code_object.cpp  code_object_create_expression.cpp  code_object_visitor.cpp  code_parameter_declaration_expression.cpp  code_primitive_expression.cpp  code_scope.cpp  code_size_of_expression.cpp  code_statement.cpp  code_type_declaration.cpp  code_type_member.cpp  code_type_reference.cpp  code_variable_declaration_statement.cpp  code_variable_reference_expression.cpp
lib/omega/parser/: mlang_driver.cpp  mlang_driver.hh  mlang_scanner.hh  mlang_scanner.ll  omega_driver.cpp  omega_driver.hh  omega_parser.yy  omega_scanner.hh  omega_scanner.ll  stack.hh
samples/: int32_extentions.ml  int64_extentions.ml  operators.ml  syscalls.ml  system.ml  test.ml
tools/: CMakeLists.txt  Makefile
tools/flexc++/documentation/man/: flexc++.yo
tools/mlang/: CMakeLists.txt  Makefile  main.cpp
tools/omega/: CMakeLists.txt  main.cpp
tools/tclap/: Makefile  config.status
tools/tclap/config/: Makefile
tools/tclap/docs/: Makefile
tools/tclap/examples/: Makefile  test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test20  test21  test3  test4  test5  test6  test7  test8  test9
tools/tclap/examples/.deps/: test1.Po  test10.Po  test11.Po  test12.Po  test13.Po  test14.Po  test15.Po  test16.Po  test17-a.Po  test17.Po  test18.Po  test19.Po  (+10 more)
tools/tclap/include/: Makefile
tools/tclap/msc/: Makefile
tools/tclap/tests/: Makefile
(+2 files in other folders)
